Fixed border radius and image text alignment
Changes the CSS border-radius value from % to px. This fixed the
disproportionate corner rounding on rectangular objects.
Added another container for image descriptions and added left and right
auto margins to center them below images.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 * {
     font-family: Arial, Helvetica, sans-serif;
-    border: 1px solid red;
+    /* border: 1px solid red; */
+    box-sizing: border-box;
 }
 
 .logo {
@@ -43,13 +44,15 @@ h2 {
 
 .desc-img {
     height: auto;
-    width: 400px;
+    width: 500px;
+    border-radius: 20px;
 }
 
 .desc {
     display: flex;
     justify-content: space-between;
     gap: 20px;
+    padding-bottom: 70px;
 }
 
 .desc-button,
@@ -59,7 +62,7 @@ h2 {
     /* max-width: 100px;
     max-width: 30px; */
     font-weight: bold;
-    border-radius: 20%;
+    border-radius: 20px;
     border: 2px solid #f0c9ff;
     background-color: #c402f5;
     color:#f0c9ff
@@ -113,7 +116,17 @@ h3 {
     width: 300px;
     height: 200px;
     border: 5px solid #c402f5;
-    border-radius: 10%;
+    border-radius: 20px;
+}
+
+.textbox {
+    display: flex;
+    justify-content: space-around;
+    align-content: center;
+    flex-wrap: wrap;
+    width: 250px;
+    margin-left:auto;
+    margin-right:auto;
 }
 
 .quote {
@@ -146,7 +159,7 @@ h3 {
     font-size: 20px;
     align-self: center;
     padding: 20px;
-    border-radius: 3%;
+    border-radius: 20px;
     display: flex;
     justify-self: center;
     max-width: 600px;
